Bug 202401 - backlight control doesn't work without acpi_backlight=vendor
Summary: backlight control doesn't work without acpi_backlight=vendor
Status: RESOLVED CODE_FIX
Alias: None
Product: ACPI
Classification: Unclassified
Component: Power-Video (show other bugs)
Hardware: All Linux
: P1 normal
Assignee: Zhang Rui
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-01-24 17:28 UTC by Abderrahim Kitouni
Modified: 2019-04-01 01:33 UTC (History)
1 user (show)

See Also:
Kernel Version: 4.19.12
Subsystem:
Regression: No
Bisected commit-id:


Attachments
quirk patch (1.11 KB, patch)
2019-03-26 09:12 UTC, Zhang Rui
Details | Diff

Description Abderrahim Kitouni 2019-01-24 17:28:53 UTC
The backlight brightness control doesn't work on my Sony Vaio model VPCEH3U1E. As recommended on #nouveau I booted with acpi_backlight=vendor, and brightness control works.

Here are my system informations:
# grep '.*' /sys/class/dmi/id/*_*
/sys/class/dmi/id/bios_date:11/17/2011
/sys/class/dmi/id/bios_vendor:INSYDE
/sys/class/dmi/id/bios_version:R0190Z9
/sys/class/dmi/id/board_asset_tag:N/A
/sys/class/dmi/id/board_name:VAIO
/sys/class/dmi/id/board_serial:N/A
/sys/class/dmi/id/board_vendor:Sony Corporation
/sys/class/dmi/id/board_version:N/A
/sys/class/dmi/id/chassis_asset_tag:N/A
/sys/class/dmi/id/chassis_serial:N/A
/sys/class/dmi/id/chassis_type:10
/sys/class/dmi/id/chassis_vendor:Sony Corporation
/sys/class/dmi/id/chassis_version:N/A
/sys/class/dmi/id/product_family:VAIO
/sys/class/dmi/id/product_name:VPCEH3U1E
/sys/class/dmi/id/product_serial:27553937-5000508
/sys/class/dmi/id/product_sku:N/A
/sys/class/dmi/id/product_uuid:4d10fca0-5077-11e1-8c17-78843cfdbff4
/sys/class/dmi/id/product_version:C106WAVW
/sys/class/dmi/id/sys_vendor:Sony Corporation

# ls /sys/class/backlight/
acpi_video0
nv_backlight


Setting the brightness using acpi_video0 doesn't work, but using nv_backlight works.
Comment 1 Zhang Rui 2019-03-26 09:08:07 UTC
please attach the dmidecode so that I can propose a quirk for this platform.
Comment 2 Zhang Rui 2019-03-26 09:12:40 UTC
Created attachment 282029 [details]
quirk patch

Please confirm this patch works for you.
Comment 3 Abderrahim Kitouni 2019-03-29 08:49:02 UTC
It does work indeed. Thanks.
Comment 4 Zhang Rui 2019-04-01 01:33:14 UTC
Good to know. Patch submitted at https://patchwork.kernel.org/patch/10878917/

Note You need to log in before you can comment on or make changes to this bug.